--- a/SnackOverFlow/Utils/Locale/Localizable.strings
+++ b/SnackOverFlow/Utils/Locale/Localizable.strings
@@ -10,3 +10,7 @@
 "signInGoogle" = "Sign In with Google";
 "signInApple" = "Sign In with Apple";
 "signUpWithEmail" = "Sign Up with Email";
+
+
+
+"getStarted" = "Get Started";
