--- a/SnackOverFlow/Utils/Locale/Localizable.strings
+++ b/SnackOverFlow/Utils/Locale/Localizable.strings
@@ -25,3 +25,10 @@
 "emailHint" = "Write your email";
 "passwordHint" = "Write your password";
 
+//Tab
+
+"tabHome" = "Home";
+"tabMarket" = "Market";
+"tabCreate" = "Create";
+"tabWishList" = "Wishlist";
+"tabAccount" = "Account";
